src/tests/errors/421_invalid_default_type/source.z42
// E0421 InvalidDefaultType — default(T) on unknown / generic type-parameter.

class Box<T> {
    public T Value;
    public Box(T v) {
        this.Value = v;
    }

    public T MakeDefault() {
        return default(T);              // E0421: generic type-param deferred
    }
}

void Main() {
    var x = default(NoSuchType);        // E0421: type 'NoSuchType' not found
}
